Configure flake8 line length
